--- a/index.html
+++ b/index.html
@@ -13,20 +13,78 @@
   </head>
 
   <body>
-    <section>
+    <section class="top-banner">
       <div class="half-width">
         <h1>Welcome To</h1>
-        <h1><span class="name-heighlight">Murad Hossain</span> Website</h1>
+        <h1><span class="orange-heighlight">Murad</span> Website</h1>
         <h3>Professional Web Developer</h3>
         <p>
           I'm a Front-End Developer. I have serious passion for UI effects,
           animations and creating intuitive, dynamic user experiences. Let's
           make something special.
         </p>
+        <a
+          class="link-button"
+          target="_blank"
+          href="https://www.linkedin.com/in/murad-hossain-6a12b212a/"
+          >HIRE ME</a
+        >
       </div>
       <div class="half-width">
         <img src="images/profilePic.jpg" alt="" />
       </div>
     </section>
+
+    <section class="dream-area">
+      <div class="half-width">
+        <img src="images/profilePic2.jpg" alt="" />
+      </div>
+      <div class="half-width">
+        <h2>Big Dream</h2>
+        <h3>Become a Full Stack Developer</h3>
+        <p>
+          I already learned the basic HTML, CSS, JavaScript and ReactJs. I can
+          build different simple website. I can even tech my brother how to make
+          a simple website. My goal is to build 10 website and learn advance
+          topics.
+        </p>
+        <a
+          class="link-button"
+          target="_blank"
+          href="https://www.linkedin.com/in/murad-hossain-6a12b212a/"
+          >DOWNLOAD RESUME</a
+        >
+      </div>
+    </section>
+
+    <section class="experience-area">
+      <h2>Experiences</h2>
+      <div id="full-stack" class="half-width single-experience">
+        <h2>Full Stack Web Developer</h2>
+        <h3 class="orange-heighlight">2021 - Present | Pro level Developer</h3>
+        <p>
+          I am the master of HTML CSS and JavaScript. I know every thing needed
+          to make a website function efficient. I didn't stop with the web. I
+          went beyond with most popular JavaScript framework called React Js. I
+          even know the deployment server and security. I will give you 100% web
+          solution.
+        </p>
+      </div>
+      <div id="jr-web" class="half-width single-experience">
+        <h2>Jr Web Developer</h2>
+        <h3 class="orange-heighlight">
+          2020 - 2021 | Programming Hero Learner
+        </h3>
+        <p>
+          Here I learned HTML CSS JavaScript React Node and MongoDB. Beside this
+          I complete 10 Projects successfully it was funworking with Programming
+          Hero.
+        </p>
+      </div>
+    </section>
+
+    <footer>
+      <p>© Murad Hossain 2020, All Rights Reserved.</p>
+    </footer>
   </body>
 </html>
